[gd_scene load_steps=32 format=4 uid="uid://bjahju06fp1ei"]

[ext_resource type="Script" uid="uid://clfyqgi8cidrb" path="res://gameboard/main.gd" id="1_0titf"]
[ext_resource type="TileSet" uid="uid://csr2ya14hmqvd" path="res://gameboard/scenes/MainTilemap.tres" id="2_46mt3"]
[ext_resource type="PackedScene" uid="uid://dprbr4w2jlt4s" path="res://gameboard/scenes/GrowPlot.tscn" id="9_kjxxd"]
[ext_resource type="PackedScene" uid="uid://d4ee5fxan4i06" path="res://gameboard/scenes/ToolPlot.tscn" id="10_1m0n5"]
[ext_resource type="Texture2D" uid="uid://bba04iiquhubv" path="res://tools/art/Hoe.png" id="11_mu0h5"]
[ext_resource type="Texture2D" uid="uid://cgy8r12hsosix" path="res://tools/art/WateringCan.png" id="13_7tmrk"]
[ext_resource type="Texture2D" uid="uid://bqj086smygr3h" path="res://tools/art/Seeds_Green.png" id="14_hhj1e"]
[ext_resource type="Texture2D" uid="uid://cvhg42yytdm84" path="res://tools/art/HandScythe.png" id="14_jcyhx"]
[ext_resource type="Texture2D" uid="uid://nhmphbsfa1f8" path="res://tools/art/Seeds_Blue.png" id="15_hhj1e"]
[ext_resource type="Resource" uid="uid://dlyk8fml2ohod" path="res://crops/resources/glowroot.tres" id="15_qol7g"]
[ext_resource type="Texture2D" uid="uid://b7qxvfgvv006w" path="res://tools/art/Seeds_Pink.png" id="16_jcyhx"]
[ext_resource type="Resource" uid="uid://cu4xalpgv2p7h" path="res://crops/resources/emberberry.tres" id="17_qol7g"]
[ext_resource type="Resource" uid="uid://7k0t487li10y" path="res://crops/resources/dewblossom.tres" id="19_nuy2r"]
[ext_resource type="Script" uid="uid://v6rk52ctsxhg" path="res://ui/scripts/inventory_ui.gd" id="20_46mt3"]
[ext_resource type="Texture2D" uid="uid://bjrx47fw1vwv8" path="res://crops/art/crop_growing.png" id="20_cj87h"]
[ext_resource type="Texture2D" uid="uid://dr0nm5gp15c2o" path="res://crops/art/grass1.png" id="21_7624x"]
[ext_resource type="LabelSettings" uid="uid://k7ywr16t344m" path="res://ui/inv_label_settings.tres" id="21_t4dus"]
[ext_resource type="Texture2D" uid="uid://ctnhxkpc5idmk" path="res://crops/art/grass4.png" id="22_46mt3"]
[ext_resource type="Texture2D" uid="uid://c7kwm2uiu0otl" path="res://crops/art/sparkle_particlepng.png" id="23_fnfwq"]
[ext_resource type="PackedScene" uid="uid://cp841ph1ve3ls" path="res://ui/gameover/game_over_screen.tscn" id="24_h73k3"]
[ext_resource type="Texture2D" uid="uid://ckyxggn68vokn" path="res://ui/Buttons/AddButtonSmall.png" id="26_jgy31"]
[ext_resource type="AudioStream" uid="uid://duaidpw3p8e67" path="res://audio/music/FarmersMarket.mp3" id="26_nu03s"]
[ext_resource type="PackedScene" uid="uid://d38jq6ycjg8fp" path="res://gameboard/decoration/grass_deco.tscn" id="27_nu03s"]
[ext_resource type="PackedScene" uid="uid://cypg6hg6knpka" path="res://gameboard/timer/countdown_timer.tscn" id="30_1ieex"]
[ext_resource type="PackedScene" uid="uid://cbmdebv26mlj" path="res://gameboard/cauldron/Cauldron.tscn" id="30_keahd"]

[sub_resource type="Gradient" id="Gradient_jgy31"]
offsets = PackedFloat32Array(0.0170455, 0.142045, 0.301136, 0.448864, 0.590909, 0.710227, 0.806818, 0.892045, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_keahd"]
gradient = SubResource("Gradient_jgy31")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nu03s"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(48, 48, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -126.0
angle_max = 24.0
direction = Vector3(1, -5, 0)
initial_velocity_min = 75.0
initial_velocity_max = 283.34
gravity = Vector3(0, 500, 0)
scale_min = 0.3
scale_max = 0.6
color_ramp = SubResource("GradientTexture1D_keahd")

[sub_resource type="Animation" id="Animation_ooy5a"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_1ieex"]
resource_name = "fade"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fnrk"]
_data = {
&"RESET": SubResource("Animation_ooy5a"),
&"fade": SubResource("Animation_1ieex")
}

[node name="Main" type="Node2D" node_paths=PackedStringArray("cauldron")]
texture_filter = 2
script = ExtResource("1_0titf")
cauldron = NodePath("Cauldron")

[node name="Gameboard" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAwAAAAAAAAAEAAYAAwAAAAAAAAAEAAcAAAAAAAAAAAADAAcAAAAAAAAAAAACAAcAAAAAAAAAAAABAAcAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAACAAYAAwAAAAAAAAADAAYAAwAAAAAAAAAFAAcAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAADAAMABwAAAAAAAAADAAIABgAAAAAAAAADAAEABAAAAAAAAAACAAEABAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAACAAUABgAAAAAAAAACAAQABgAAAAAAAAACAAMABgAAAAAAAAACAAIABgAAAAAAAAADAAQABgAAAAAAAAADAAUABwAAAAAAAAAEAAUABgAAAAAAAAAEAAQABgAAAAAAAAAEAAMABgAAAAAAAAAEAAIABgAAAAAAAAAEAAEABAAAAAAAAAAFAAEABAAAAAAAAAAFAAIABwAAAAAAAAAFAAMABgAAAAAAAAAFAAQABwAAAAAAAAAFAAUABgAAAAAAAAAGAAUABQAAAAAAAAAGAAQABQAAAAAAAAAGAAMABQAAAAAAAAAGAAIABQAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAAIAAQAAAAAAAAAAAA=")
tile_set = ExtResource("2_46mt3")

[node name="Decoration" type="Node2D" parent="."]

[node name="GrassDeco" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(478, 448)

[node name="GrassDeco2" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(758, 457)

[node name="GrassDeco3" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(48, 481)

[node name="GrassDeco4" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(430, 71)

[node name="GrassDeco5" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(684, 43)

[node name="GrassDeco6" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(779, 242)

[node name="GrassDeco7" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(451, 342)

[node name="GrassDeco8" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(476, 150)

[node name="GrassDeco9" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(345, 480)

[node name="GrassDeco10" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(193, 472)

[node name="GrassDeco11" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(46, 107)

[node name="GrassDeco12" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(93, 47)

[node name="GrassDeco13" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(116, 453)

[node name="GrassDeco14" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(279, 462)

[node name="GrassDeco15" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(583, 485)

[node name="GrassDeco16" parent="Decoration" instance=ExtResource("27_nu03s")]
position = Vector2(660, 431)

[node name="Plots" type="Node2D" parent="."]

[node name="GrowPlot1" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(160, 160)

[node name="GrowPlot2" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(224, 160)

[node name="GrowPlot3" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(288, 160)

[node name="GrowPlot4" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(352, 160)

[node name="GrowPlot5" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(160, 224)

[node name="GrowPlot6" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(224, 224)

[node name="GrowPlot7" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(288, 224)

[node name="GrowPlot8" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(352, 224)

[node name="GrowPlot9" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(160, 288)

[node name="GrowPlot10" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(224, 288)

[node name="GrowPlot11" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(288, 288)

[node name="GrowPlot12" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(352, 288)

[node name="GrowPlot13" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(160, 352)

[node name="GrowPlot14" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(224, 352)

[node name="GrowPlot15" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(288, 352)

[node name="GrowPlot16" parent="Plots" instance=ExtResource("9_kjxxd")]
position = Vector2(352, 352)

[node name="Tools" type="Node2D" parent="."]

[node name="ToolPlot1" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(191, 53)
tool_name = "Hoe"
tool_function = "Till"
icon = ExtResource("11_mu0h5")

[node name="ToolPlot2" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(255, 53)
tool_name = "WaterBucket"
tool_function = "Water"
icon = ExtResource("13_7tmrk")

[node name="ToolPlot3" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(319, 53)
tool_name = "Scythe"
tool_function = "Harvest"
icon = ExtResource("14_jcyhx")

[node name="SeedPlot1" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(53, 192)
tool_name = "Glowroot"
tool_function = "Glowroot"
icon = ExtResource("14_hhj1e")
is_seed = true
crop = ExtResource("15_qol7g")

[node name="SeedPlot2" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(53, 256)
tool_name = "Emberberry"
tool_function = "Emberberry"
icon = ExtResource("16_jcyhx")
is_seed = true
crop = ExtResource("17_qol7g")

[node name="SeedPlot3" parent="Tools" instance=ExtResource("10_1m0n5")]
position = Vector2(54, 319)
tool_name = "Dewblossom"
tool_function = "Dewblossom"
icon = ExtResource("15_hhj1e")
is_seed = true
crop = ExtResource("19_nuy2r")

[node name="Cauldron" parent="." instance=ExtResource("30_keahd")]
position = Vector2(543, 251)

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="InventoryUI" type="PanelContainer" parent="GameUI" node_paths=PackedStringArray("cauldron")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 42.0
offset_top = 17.0
offset_right = 332.0
offset_bottom = 118.0
grow_horizontal = 2
script = ExtResource("20_46mt3")
cauldron = NodePath("../../Cauldron")

[node name="MarginContainer" type="MarginContainer" parent="GameUI/InventoryUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/InventoryUI/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 2

[node name="InventoryParticle" type="GPUParticles2D" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/Title"]
unique_name_in_owner = true
position = Vector2(43, 33)
emitting = false
amount = 10
texture = ExtResource("23_fnfwq")
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 0.8
trail_lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_nu03s")

[node name="HSeparator" type="HSeparator" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GlowrootBox" type="VBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Glowroot"

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GreenIcon" type="TextureRect" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("20_cj87h")
expand_mode = 3

[node name="GreenCount" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
text = "0"
label_settings = ExtResource("21_t4dus")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons"]
layout_mode = 2
text = "1"

[node name="TextureButton2" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label2" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons"]
layout_mode = 2
text = "5"

[node name="VSeparator" type="VSeparator" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="EmberberryBox" type="VBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Emberberry"

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RedIcon" type="TextureRect" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("21_7624x")
expand_mode = 3

[node name="RedCount" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
text = "0"
label_settings = ExtResource("21_t4dus")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons"]
layout_mode = 2
text = "1"

[node name="TextureButton2" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label2" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons"]
layout_mode = 2
text = "5"

[node name="VSeparator2" type="VSeparator" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DewblossomBox" type="VBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Dewblossom"

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BlueIcon" type="TextureRect" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("22_46mt3")
expand_mode = 3

[node name="BlueCount" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
text = "0"
label_settings = ExtResource("21_t4dus")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons"]
layout_mode = 2
text = "1"

[node name="TextureButton2" type="TextureButton" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("26_jgy31")

[node name="Label2" type="Label" parent="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons"]
layout_mode = 2
text = "5"

[node name="CountdownTimer" parent="GameUI" instance=ExtResource("30_1ieex")]
texture_filter = 2
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -277.0
offset_top = 9.0
offset_right = -231.0
offset_bottom = 49.0
grow_horizontal = 0
grow_vertical = 2

[node name="Fader" type="ColorRect" parent="GameUI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameUI/Fader"]
libraries = {
&"": SubResource("AnimationLibrary_7fnrk")
}
autoplay = "fade"

[node name="GameOverScreen" parent="GameUI" instance=ExtResource("24_h73k3")]
visible = false
offset_top = 2.0
offset_bottom = 2.0

[node name="Sounds" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("26_nu03s")
volume_db = -5.0
bus = &"Music"

[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons/TextureButton" to="Cauldron" method="_on_add_glowroot_one_pressed"]
[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/GlowrootBox/Buttons/TextureButton2" to="Cauldron" method="_on_add_glowroot_five_pressed"]
[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons/TextureButton" to="Cauldron" method="_on_add_emberberry_one_pressed"]
[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/EmberberryBox/Buttons/TextureButton2" to="Cauldron" method="_on_add_emberberry_five_pressed"]
[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons/TextureButton" to="Cauldron" method="_on_add_dewblossom_one_pressed"]
[connection signal="pressed" from="GameUI/InventoryUI/MarginContainer/VBoxContainer/HBoxContainer/DewblossomBox/Buttons/TextureButton2" to="Cauldron" method="_on_add_dewblossom_five_pressed"]
